--- a/public/css/default.css
+++ b/public/css/default.css
@@ -30,9 +30,11 @@ body {
   width: 400px;
 }
 
+/*
 .item-x3 {
   width: 600px;
 }
+*/
 
 .item img {
   width:200px;
@@ -67,7 +69,7 @@ body {
 }
 
 .sp-top-sm {
-  margin-top: 2em;
+  margin-top: 1em;
 }
 
 .sp-top-xl {
@@ -91,6 +93,8 @@ body {
   padding: 1em;
   background-color:#e7e7e7;
   border-radius: 1em;
+  margin-left: 32px;
+  width: 420px;
 }
 
 canvas {
