--- a/app/views/partials/profile.haml
+++ b/app/views/partials/profile.haml
@@ -1,17 +1,17 @@
 %ul.nav.navbar-nav.pull-right
   %li.dropdown
-    -user = current_user
+    -token= current_user
     -if user
       %a.dropdown-toggle{href: "#", role: "button", aria: { haspopup: "true", expanded: "false"}, data: { toggle: "dropdown"}}
-        =user.name
+        =token[0]['name']
         %span.caret
       %ul.dropdown-menu
         %li
-          %a{href: "#{user.profile_url}"}
+          %a{href: "#{url_for("/profile")}"}
             Profile
         %li
-          %a{href: "#{user.logout_url}"}
+          %a{href: "#{url_for("/logout")}"}
             Logout
     -else
-      %a{href:"#{login_location}"}
+      %a{href:"#{url_for("/login")}"}
         Login
