--- a/app/views/login.haml
+++ b/app/views/login.haml
@@ -5,5 +5,6 @@
       %form.form-signin{method: "POST", action: "#{url_for("/login")}"}
         %input.form-control#username{name: "username", type: "input", placeholder: "Username", required: true, autofocus: true}
         %input.form-control#password{name: "password", type: "password", placeholder: "Password", required: true}
+        %input#referer{name: "referer", type: "hidden", value: "#{referer}"}
         %button.btn.btn-lg.btn-primary.btn-block.btn-signin{type: "submit"}
           Sign In
