fixes issue adding tracks to playlist

--- a/app/views/radio.haml
+++ b/app/views/radio.haml
@@ -9,7 +9,8 @@
   var myPlaylist
 
   function append(playlist, json) {
-    track = JSON.parse(json)[0];
+    // track data is double encoded JSON, hence two parses
+    track = JSON.parse(JSON.parse(json)[0]);
     playlist.add(track, false);
   }
 
