--- a/public/css/default.css
+++ b/public/css/default.css
@@ -40,6 +40,8 @@ body {
   width:200px;
 }
 
+.top-buffer { margin-top:20px; }
+
 .album-title {
   font-style:italic;
 }
@@ -93,8 +95,6 @@ body {
   padding: 1em;
   background-color:#e7e7e7;
   border-radius: 1em;
-  margin-left: 32px;
-  width: 420px;
 }
 
 canvas {
@@ -146,4 +146,9 @@ canvas {
   cursor: pointer;
   cursor: hand;
   border-bottom: 1px solid rgb(238, 238, 238);
+}
+
+.col-centered{
+    float: none;
+    margin: 0 auto;
 }
