--- a/app/views/artist.haml
+++ b/app/views/artist.haml
@@ -1,13 +1,11 @@
 .row
-  .col-sm-offset-4.col-sm-4.artist
+  .col-sm-6.artist
+    =haml :"partials/artist", locals: { artist: artist, admin: true}
+  .col-sm-6.artist
     %h2
       =artist.name
-.row.top-buffer
-  .col-sm-offset-4.col-sm-1.artist
-    =haml :"partials/artist", locals: { artist: artist, admin: true}
-.row.top-buffer
-  .col-sm-offset-2.col-sm-7
     .summary.mb-5#summary
+.row.top-buffer
 .row.top-buffer
   .col-sm-12.albums
     -artist.albums.each do |album|
