--- a/public/css/default.css
+++ b/public/css/default.css
@@ -56,10 +56,6 @@ body {
   border: 1px solid #e7e7e7;
 }
 
-img .artist {
-  max-width:50%;
-}
-
 .autocomplete-selected {
   background-color:#e7e7e7;
   border: 1px solid #f8f8f8;
@@ -99,6 +95,8 @@ img .artist {
   padding: 1em;
   background-color:#e7e7e7;
   border-radius: 1em;
+  overflow: scroll;
+  max-height: 300px;
 }
 
 canvas {
