--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,10 +1,10 @@
 -artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
-  =haml :"partials/artist", locals: {artist: artist, admin: false}
+  =haml :"partials/artist", locals: {artist: artist, admin: false, use_small: true}
 :javascript
   var container = document.querySelector('#content')
   var msnry = new Masonry( container, {
     // options
-    columnWidth: 200,
+    columnWidth: 180,
     itemSelector: '.item'
   });
   imagesLoaded(container, function() {
