--- a/app/views/search.haml
+++ b/app/views/search.haml
@@ -5,7 +5,7 @@
 %h3
   Artists
 -artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
-  =haml :"partials/artist", locals: {artist: artist, admin: false}
+  =haml :"partials/artist", locals: {artist: artist, admin: false, use_small: true}
 %h3
   Albums
 -albums.to_a.select{|album| album.tracks.size > 0}.each do |album|
