--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -24,7 +24,7 @@
       var keypress_enable=true;
       var album_summary_available=false;
       var track_summary_available=true;
-  %body#image
+  %body
     %nav.navbar.navbar-default#nav{role: "navigation"}
       .navbar-header
         %button.navbar-toggle{type:"button", data:{toggle: "collapse", target: "#navbar-collapse"}}
