--- a/app/views/artist.haml
+++ b/app/views/artist.haml
@@ -17,8 +17,8 @@
     var img_height = $('#artist_image')[0].offsetHeight;
     $('#summary')[0].style.maxHeight = img_height.toString() + "px";
     $('#summary').append("<h3>#{artist.name}</h3>");
-    $('#summary').append("<p class='links'><a target='_' href='" + data.url + "'>wikipedia</a></p>");
-    $('#summary').append("<p class='text'>" + data.summary + "</p>");
+    $('#summary').append("<p class='text'>" + data.summary);
+    $('#summary').append("  <a target='_' href='" + data.url + "'>…more at wikipedia</a></p>");
     summary_loaded = true;
     masonrize();
   }
