--- a/public/css/default.css
+++ b/public/css/default.css
@@ -8,6 +8,15 @@ body {
   height: 100%;
 }
 
+#tracklist {
+ margin-top:46px;
+}
+
+td {
+  font-size: 0.8em;
+}
+
+
 .jp-controls {
   box-sizing: content-box;
 }
