update for haml update

--- a/app/views/admin/artist.haml
+++ b/app/views/admin/artist.haml
@@ -17,10 +17,10 @@
       Image Name
     %input.form-control{type:"text", name:"image_name", value: "#{model.image_path}", onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_image(#{model.id})}"}
 .row.sp-top-sm.no-pad
-  =haml :'partials/tags', locals: { owner_id: model.id, tags: model.tags }
+  !=haml :'partials/tags', locals: { owner_id: model.id, tags: model.tags }
 .row
   .col-xs-12
-    =haml :'partials/newtag', locals: { owner_id: model.id }
+    !=haml :'partials/newtag', locals: { owner_id: model.id }
 :javascript
   keypress_enable=false;
 
