--- a/app/views/album.haml
+++ b/app/views/album.haml
@@ -2,9 +2,9 @@
   .col-sm-5
     -if current_user
       .favorites
-        =haml :"partials/favorites", locals: { tracks: order_tracks(album.tracks) }
+        !=haml :"partials/favorites", locals: { tracks: order_tracks(album.tracks) }
     .player
-      =haml :"partials/player", locals: { admin_url: "#{url_for("/admin/album/#{album.id}")}" }
+      !=haml :"partials/player", locals: { admin_url: "#{url_for("/admin/album/#{album.id}")}" }
     //=haml :"partials/visualizer"
     .summary#track_summary
   .col-sm-7
