--- a/app/views/index.haml
+++ b/app/views/index.haml
@@ -1,5 +1,5 @@
 -artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
-  =haml :"partials/artist", locals: {artist: artist, admin: false, use_small: true}
+  !=haml :"partials/artist", locals: {artist: artist, admin: false, use_small: true}
 :javascript
   var container = document.querySelector('#content')
   var msnry = new Masonry( container, {
