--- a/app/views/logs.haml
+++ b/app/views/logs.haml
@@ -1,4 +1,4 @@
-=haml :paging, locals: {model: model, base: "/logs"}
+!=haml :paging, locals: {model: model, base: "/logs"}
 %table.table
   %thead
     %th
