--- a/app/views/partials/favorites.haml
+++ b/app/views/partials/favorites.haml
@@ -1,7 +1,7 @@
 -tracks.each_with_index do |track, idx|
   %form.track_favorites
     .track
-      = haml :'partials/favorite', locals: {track: track}
+      != haml :'partials/favorite', locals: {track: track}
 :javascript
   function favorite_track(track_id) {
     var form=$(".track_favorites");
