--- a/app/views/tracks.haml
+++ b/app/views/tracks.haml
@@ -31,7 +31,7 @@
     -unless tracks.empty?
       .row
         .col-xs-4
-          =haml :"partials/player", locals: { admin_url: nil }
+          !=haml :"partials/player", locals: { admin_url: nil }
 :javascript
   $('#search').prop('action', "#{url_for('/tracks')}");
   $('.navbar-info').html("#{tracks.count} tracks");
