--- a/app/views/partials/player.haml
+++ b/app/views/partials/player.haml
@@ -1,45 +1,6 @@
-#jquery_jplayer_1.jp-jplayer
-#jp_container_1.jp-audio{role: 'application', aria: { label: 'media player'} }
-  .jp-type-playlist
-    .jp-gui.jp-interface
-      .jp-controls
-        %button.jp-previous{role: 'button', :tabindex => '0'}
-          previous
-        %button.jp-play{role: 'button', :tabindex => '0'}
-          play
-        %button.jp-next{role: 'button', :tabindex => '0'}
-          next
-        %button.jp-stop{role: 'button', :tabindex => '0'}
-          stop
-      .jp-progress
-        .jp-seek-bar
-          .jp-play-bar
-      .jp-volume-controls
-        %button.jp-mute{role: 'button', :tabindex => '0'}
-          mute
-        %button.jp-volume-max{role: 'button', :tabindex=>'0'}
-          max volume
-        .jp-volume-bar
-          .jp-volume-bar-value
-      .jp-time-holder
-        .jp-current-time{role: 'timer', aria: { label: 'time'}}
-          &nbsp;
-        .jp-duration{role: 'timer', aria: { label: 'duration'}}
-          &nbsp;
-      .jp-toggles
-        %button.jp-repeat{role: 'button', :tabindex=>'0'}
-          repeat
-        %button.jp-shuffle{role: 'button', :tabindex=>'0'}
-          shuffle
-    .jp-playlist
-      %ul
-        %li
-          &nbsp;
-    %div.jp-no-solution
-      %span
-        Update Required
-      To play the media you will need to either update your browser to a recent version
-  -unless !current_user || admin_url.nil?
-    .edit
-      %a.item{href: "#{admin_url}" }
-        Edit
+#player-container
+-unless !current_user || admin_url.nil?
+  .edit
+    %a.item{href: "#{admin_url}" }
+      Edit
+:javascript
