--- a/app/views/playlist.haml
+++ b/app/views/playlist.haml
@@ -14,6 +14,7 @@
 
 
   document.addEventListener('DOMContentLoaded', () => {
+    document.title = "#{playlist.name}";
     const playlist = [#{playlist.track_list}];
     new AudioPlayer(playlist, 'player-container', {
       onTrackStart: (track) => console.log('Now playing:', track.title),
