--- a/app/views/playlist.haml
+++ b/app/views/playlist.haml
@@ -17,9 +17,6 @@
     const playlist = [#{playlist.track_list}];
     new AudioPlayer(playlist, 'player-container', {
       onTrackStart: (track) => {
-        $.ajax({type: "GET", url: track.url.replace("stream","log")});
-        //get_summary("#{url_for("/track")}" + get_id(track.url) + '/summary', track_summary, "track_summary_available", "#track_summary");
-        notify(track);
         $('.navbar-info').html("                                   \
           <a href='#{url_for("/playlists")}' title='playlists'<span class='album-title'>playlists</span></a> >      \
           <a href='#{playlist.id.nil? ? "?" : url_for("/playlist/#{playlist.id}")}' title='#{playlist.name}'>      \
@@ -28,7 +25,11 @@
           <span class='track-title'>" + track.title + "</span>");
         $(document).prop("title", track.title);
       } ,
-      onFiveSecondMark: (track) => console.log('5 seconds into track:', track.title)
+      onFiveSecondMark: (track) => {
+        $.ajax({type: "GET", url: track.url.replace("stream","log")});
+        //get_summary("#{url_for("/track")}" + get_id(track.url) + '/summary', track_summary, "track_summary_available", "#track_summary");
+        notify(track);
+      }
     });
   });
   
