--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -9,6 +9,7 @@
     %script{:type => "text/javascript", :src => "#{url_for('/libs/jquery/dist/jquery.min.js')}"}
     %link{:rel => "stylesheet", :href => "#{url_for '/libs/bootstrap/dist/css/bootstrap.min.css'}", :type => "text/css"}
     %link{:rel => "stylesheet", :href => "#{url_for '/css/default.css'}", :type => "text/css", :media => "screen" }
+    %link{:rel => "stylesheet", :href => "#{url_for '/css/player.css'}", :type => "text/css", :media => "screen" }
     %link{rel:"shortcut icon",href:"//patf.com/images/bemused.ico"}
     %script{:type => "text/javascript", :src => "#{url_for '/libs/bootstrap/dist/js/bootstrap.min.js'}"}
     %script{:type => "text/javascript", :src => "#{url_for '/js/music-player/dist/player.js'}"}
